# Swift-Mail

./: README.md  runserver.md
client/: package-lock.json  package.json  pnpm-lock.yaml
client/public/: index.html
client/src/: App.js
client/src/components/: Inbox.jsx
client/src/config/: Placement.js  messageData.js  messageSpam.js
client/src/pages/: Dashboard.jsx  Login.jsx  NewMessage.jsx  Register.jsx
client/src/pages/css/: Dashboard.css  Login.css  NewMessage.css  Register.css
server/: main.py  pyproject.toml
server/swiftmail/: __init__.py  main.py
server/swiftmail/model/: spam.py
server/swiftmail/models/: groups.py  label.py  mails.py  options.py  user.py
server/swiftmail/routes/: __init__.py  base.py  group.py  mail.py  search.py
server/swiftmail/schemas/: auth.py
server/swiftmail/templates/: base.html  login.html  register.html
server/swiftmail/utils/: auth.py  config.py
server/tests/: test_auth.py
src/components/: AccountsPopup.jsx  EmptyFolder.jsx
src/pages/: Dashboard.jsx  Register.jsx
src/pages/css/: Dashboard.css  Register.css
