[tool.poetry]
name = "swiftmail"
version = "0.1.0"
description = "API for Swift-Mail"
authors = ["Meetesh Saini <code.meeteshsaini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pymongo = "^4.6.2"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

