[tool.poetry]
name = "swiftmail"
version = "0.1.0"
description = "API for Swift-Mail"
authors = ["Meetesh Saini <code.meeteshsaini@gmail.com>","Dhananjay Chauhan <dj.0.0omicron.mic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.6.2"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-pymongo = "^2.3.0"
flask-jwt-extended = "^4.6.0"
nltk = "^3.8.1"
scikit-learn = "^1.4.2"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

